# rusqlite-experiment

./: .gitignore  Makefile  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
cli/src/tui_app/: app.rs  message.rs  mod.rs  state.rs
cli/src/tui_app/app/: mod.rs  update.rs  view.rs
ffi/: Cargo.toml
ffi/src/: error.rs  lib.rs
ffi/src/database/: encryption.rs  is_encrypted.rs  mod.rs  set_encryption.rs
spa/: .gitignore  README.md  index.html  main.ts  style.css
spa/worker/: handle-manager.ts  proxy.ts  types.ts  wasm-worker.ts
todo-list/: Cargo.toml
todo-list/src/: lib.rs
todo-list/src/model/: item.rs  mod.rs  todo_list.rs
todo-list/src/schema/: mod.rs  schema.sql
