[package]
name = "ffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.101"
derive_more = { version = "2.1.1", features = ["display", "from"] }
js-sys = "0.3.85"
rusqlite = "0.38.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-wasm-bindgen = "0.6.5"
sqlite-wasm-rs = { version = "0.5.2", features = ["sqlite3mc"] }
sqlite-wasm-vfs = "0.2.0"
todo-list = { version = "0.1.0", path = "../todo-list", default-features = false }
wasm-bindgen = "0.2.108"
wasm-bindgen-futures = "0.4.58"
web-sys = { version = "0.3.85", features = ["console"] }

# these aren't used directly, but we need to enable the js feature
getrandom_2 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom_3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.20.0", features = ["js"] }
