[package]
name = "todo-list"
version = "0.1.0"
edition = "2024"

[dependencies]
accessory = "2.1.0"
anyhow = "1.0.100"
derive_more = { version = "2.1.1", features = ["deref", "from", "into"] }
log = { version = "0.4.29", features = ["kv"] }
once-fn = "0.2.1"
time = { version = "0.3.47", features = ["macros", "parsing"] }
turso = { version = "0.5.0-pre.8", default-features = false }

[features]
default = ["mimalloc"]
mimalloc = ["turso/mimalloc"]
